# email-triage-env

./: .gitignore  Dockerfile  README.md  app.py  data.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
