[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.4",
    "openai==1.30.0",
    "requests==2.32.3",
    "anyio==4.3.0",
]

[project.scripts]
serve = "app:app"

[tool.setuptools.packages.find]
where = ["."]